# furious-api

./: .gitignore  LICENSE  README.md  pyproject.toml
furious_api/: main.py
furious_api/starters/: __init__.py
furious_api/starters/file_type/: __init__.py  scripts.py
furious_api/starters/file_type/bases/: .env.exemple  README.md  initdb.py  main.py  requirements.txt
furious_api/starters/file_type/bases/alembic/: env.py
furious_api/starters/file_type/bases/api/: main.py
furious_api/starters/file_type/bases/api/routes/: example.py
furious_api/starters/file_type/bases/app/: main.py
furious_api/starters/file_type/bases/app/api/: __init__.py
furious_api/starters/file_type/bases/app/api/routes/: example.py
furious_api/starters/file_type/bases/app/core/: database.py
furious_api/starters/file_type/bases/app/crud/: example.py
furious_api/starters/file_type/bases/app/models/: __init__.py  example.py  main.py
furious_api/starters/file_type/bases/core/: config.py  database.py
furious_api/starters/file_type/bases/crud/: example.py
furious_api/starters/file_type/bases/models/: example.py  main.py
furious_api/starters/file_type/bases/schemas/: example.py
starters/: file_type.py
