[tool.poetry]
name = "furious-api"
version = "0.1.0"
description = ""
authors = ["mts-lucas <lmateus1067@outlook.com>"]
readme = "README.md"
include = [
    "furious_api/starters/file_type/bases/**"
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.9.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.16.1"

[tool.poetry.scripts]
furious = "furious_api.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"